# aitraffic-analyzer

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: aitraffic_analyzer_design_doc.md  aitraffic_analyzer_design_doc_en.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: RecordCard.tsx
frontend/src/pages/: Dashboard.tsx  NewTask.tsx  TaskDetail.tsx
prism/: __init__.py  config.py  database.py  main.py  models.py
prism/api/: certs.py  live.py  records.py  signatures.py  tasks.py  websocket.py
prism/capture/: cert_manager.py  mitm.py  probe.py
prism/identification/: engine.py  metadata.py
prism/pcap/: analyzer.py
prism/report/: generator.py
prism/scripting/: prism_page.py
prism/signatures/: ai_domains.yaml  ai_patterns.yaml
prism/stream/: sse.py  websocket.py
